[ash-md] Keeps overview mode shield above DesktopBackgroundView

Reparenting the background widgets modifies the stacking order. This CL
restores the intended order by updating the stacking in Layout().

BUG=640929

Review-Url: https://codereview.chromium.org/2278903003
Cr-Commit-Position: refs/heads/master@{#414537}

Former-commit-id: 6fae847c2b1a45bc248e33bf29db361dd13fcf47